Adicionado os ícones de editar e excluir da tabela de usuários.

--- a/PDFMerger/WebContent/cadastro.xhtml
+++ b/PDFMerger/WebContent/cadastro.xhtml
@@ -15,7 +15,6 @@
   
 		<!-- Bootstrap CSS -->
 		<link href="css/bootstrap.min.css" rel="stylesheet" />
-		<link href="css/style.css" rel="stylesheet" />
 		<link href="css/combo.css" rel="stylesheet" />
 		<link href="css/ckbox.css" rel="stylesheet" />
 		<link href="css/font-awesome.min.css" rel="stylesheet" />
@@ -128,6 +127,7 @@
 									<th class="col-md-2">Login</th>
 									<th class="col-md-3">E-mail</th>
 									<th class="col-md-1">Perfil</th>
+									<th class="col-md-1"></th>
 								</tr>
 							</thead>
 							<tbody>
@@ -136,6 +136,10 @@
 									<td>admin</td>
 									<td>pdfmadmin@pdfm.com.br</td>
 									<td>Administrador</td>
+									<td class="text-center">
+										<i class="fa fa-pencil" aria-hidden="true"></i>
+										<i class="fa fa-trash-o icon-line" aria-hidden="true"></i>
+									</td>
 								</tr>
 							
 							</tbody>
