Corrigido o problema do combobox.

--- a/PDFMerger/WebContent/cadastro.xhtml
+++ b/PDFMerger/WebContent/cadastro.xhtml
@@ -19,7 +19,7 @@
 		<link href="css/ckbox.css" rel="stylesheet" />
 		<link href="css/font-awesome.min.css" rel="stylesheet" />
 		
-		<script src="js/tabelaJs.js"></script>
+		<script src="js/TabelaJs.js"></script>
 		<script src="js/combo.js"></script>
 	</h:head>
 
