Adicionado barra superior na página de cadastro de usuários.
Tudo ainda apenas em puro HTML.

--- a/PDFMerger/WebContent/cadastro.xhtml
+++ b/PDFMerger/WebContent/cadastro.xhtml
@@ -17,6 +17,7 @@
 		<link href="css/bootstrap.min.css" rel="stylesheet" />
 		<link href="css/combo.css" rel="stylesheet" />
 		<link href="css/ckbox.css" rel="stylesheet" />
+		<link href="css/nav.css" rel="stylesheet" />
 		<link href="css/font-awesome.min.css" rel="stylesheet" />
 		
 		<script src="js/TabelaJs.js"></script>
@@ -24,6 +25,28 @@
 	</h:head>
 
 	<h:body>
+		
+		<div class="navbar-inverse nav-top navbar-static-top">
+			<div class="container">
+				<div class="row">	
+					<div class="col-sm-12">
+						<a href="#"><i class="selecionado fa fa-user-plus icon-nav fa-1x" aria-hidden="true"></i></a>
+						<a href="#"><i class="fa fa-files-o icon-nav fa-1x" aria-hidden="true"></i></a>
+						<a href="#"><i class="fa fa-cogs icon-nav fa-1x" aria-hidden="true"></i></a>
+						<ul class="navbar-nav navbar-right nav-drop">
+							<li class="dropdown">
+								<a href="#" class=" dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administrador do sistema <span class="caret"></span></a>
+								<ul class="dropdown-menu">
+					
+								<li><a href="#">Sair</a></li>
+								</ul>
+							</li>
+						</ul>
+			
+					</div>
+				</div>
+ 	 		</div>
+		</div>
 		
 		<div class="container">
 			<div class="row">
