--- a/PDFMerger/WebContent/cadastro.xhtml
+++ b/PDFMerger/WebContent/cadastro.xhtml
@@ -26,7 +26,7 @@
 
 	<h:body>
 		
-		<div class="navbar-inverse nav-top navbar-static-top">
+		<div class="navbar-inverse nav-top navbar-fixed-top">
 			<div class="container">
 				<div class="row">	
 					<div class="col-sm-12">
@@ -48,7 +48,7 @@
  	 		</div>
 		</div>
 		
-		<div class="container">
+		<div class="container topo">
 			<div class="row">
         		<!-- Formulario -->
         		<div class="col-sm-12">
