Corrigido problema de não resetar combobox perfil ao clicar em cancelar.

--- a/PDFMerger/WebContent/cadastro.xhtml
+++ b/PDFMerger/WebContent/cadastro.xhtml
@@ -129,7 +129,7 @@
     	                		</div>
 					
 								<div class="text-center">
-									<button type="reset" Class="btn btn-default bot">Cancelar</button>
+									<button Class="btn btn-default bot">Cancelar</button>
 									<h:commandButton styleClass="btn btn-success bot botLine" action="#{beanUsuario.cadastrar}" value="Salvar" />
 								</div>
 							</h:form>
