--- a/PDFMerger/WebContent/cadastro.xhtml
+++ b/PDFMerger/WebContent/cadastro.xhtml
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 	
 
 <h:head>
@@ -16,15 +17,13 @@
   
 		<!-- Bootstrap CSS -->
 		<link href="css/bootstrap.min.css" rel="stylesheet" />
-		<link href="css/combo.css" rel="stylesheet" />
+		<link href="css/estilos.css" rel="stylesheet" />
 		<link href="css/ckbox.css" rel="stylesheet" />
 		<link href="css/nav.css" rel="stylesheet" />
 		<link href="css/mensagem.css" rel="stylesheet" />
 		<link href="css/font-awesome.min.css" rel="stylesheet" />
 		
 		<script src="js/TabelaJs.js"></script>
-		<script src="js/combo.js"></script>
-		<script src="js/limpaForm.js"></script>
 	</h:head>
 
 	<h:body>
@@ -53,9 +52,6 @@
 		
 		<div class="container topo">
 			<div class="row">
-			
-			
-			
         		<!-- Formulario -->
         		<div class="col-sm-12">
             		<div class="panel panel-default cor-fundo">
@@ -68,21 +64,21 @@
 							</div>
 							<h:form  class="limpa">
 								<div class="form-group">
+									<h:inputHidden value="#{beanUsuario.idUsuario}" />
                         			<label for="nome" class="col-sm-2 control-label">Nome</label>
                         			<div class="col-sm-4">
                             			<h:inputText styleClass="form-control limpaCampo" value="#{beanUsuario.nome}" />
                         			</div>
 									<label for="perfil" class="col-sm-1 control-label">Perfil</label>
                         			<div class="col-sm-3">
-										<a class="btn btn-default btn-select">
-											<h:inputText styleClass="btn-select-input" style="display:none" value="#{beanUsuario.perfil}" />
-											<span class="btn-select-value"></span>
-											<span class='btn-select-arrow glyphicon glyphicon-chevron-down'></span>
-											<ul>
-												<li>Administrador</li>
-												<li class="selected">Usuário comum</li>
-											</ul>
-										</a>
+                                    	<!-- <select class="form-control">
+                                        	<option value="Administrador">Administrador</option>
+                                        	<option value="Administrador" selected="selected">Usuário comum</option>
+                                    	</select> -->
+                                    	<h:selectOneMenu styleClass="form-control" value="#{beanUsuario.perfil}" biding="#{beanUsuario.perfil}">
+                                    		<f:selectItem itemLabel="Administrador" itemValue="Administrador" />
+                                    		<f:selectItem itemLabel="Usuário comum" itemValue="Usuário comum" />
+                                    	</h:selectOneMenu>
 									</div>
                     			</div>
                     
@@ -129,7 +125,7 @@
     	                		</div>
 					
 								<div class="text-center">
-									<button Class="btn btn-default bot">Cancelar</button>
+									<h:commandButton styleClass="btn btn-default bot" action="#{beanUsuario.resetaBean}" value="Limpar" />
 									<h:commandButton styleClass="btn btn-success bot botLine" action="#{beanUsuario.cadastrar}" value="Salvar" />
 								</div>
 							</h:form>
@@ -172,13 +168,11 @@
 										<td>#{usuario.perfil}</td>
 										<td class="text-center">
 										<h:form>
-											<h:commandLink action="#{beanUsuario.editar}">
-												<i class="fa fa-pencil" aria-hidden="true"></i>
-												<f:setPropertyActionListener value="#{usuario}" target="#{beanUsuario.usuario}" />
+											<h:commandLink action="#{beanUsuario.editar(usuario.idUsuario)}">
+												<i class="fa fa-pencil icon-line" aria-hidden="true"></i>
 											</h:commandLink>
-											<h:commandLink action="#{beanUsuario.excluir}">
+											<h:commandLink action="#{beanUsuario.excluir(usuario.idUsuario)}">
 												<i class="fa fa-trash-o icon-line" aria-hidden="true"></i>
-												<f:setPropertyActionListener value="#{usuario}" target="#{beanUsuario.usuario}" />
 											</h:commandLink>
 											</h:form>
 										</td>
