--- a/PDFMerger/WebContent/cadastro.xhtml
+++ b/PDFMerger/WebContent/cadastro.xhtml
@@ -6,8 +6,7 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 	
-
-<h:head>
+	<h:head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -31,9 +30,9 @@
 			<div class="container">
 				<div class="row">	
 					<div class="col-sm-12">
-						<a href=""><i class="selecionado fa fa-user-plus icon-nav fa-1x" aria-hidden="true"></i></a>
+						<a href="cadastro.xhtml"><i class="selecionado fa fa-user-plus icon-nav fa-1x" aria-hidden="true"></i></a>
 						<a href=""><i class="fa fa-files-o icon-nav fa-1x" aria-hidden="true"></i></a>
-						<a href=""><i class="fa fa-cogs icon-nav fa-1x" aria-hidden="true"></i></a>
+						<a href="arquivos.xhtml"><i class="fa fa-cogs icon-nav fa-1x" aria-hidden="true"></i></a>
 						<ul class="navbar-nav navbar-right nav-drop">
 							<li class="dropdown">
 								<a href="#" class=" dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">#{usuarioLogado.nome} <span class="caret"></span></a>
