Melhorias na função de upload e tabela de arquivos disponíveis.
Realizado alteração na função de upload de arquivos para verificar
somente o nome dos dos arquivos que o usuário logado possui acesso.
A tabela de arquivos disponíveis agora exibe somente os arquivos que o
usuário logado possui acesso, e em ordem alfabética. Adicionado o ícone
para realizar o download do arquivo. Realizado alteração para o ícone de
acesso publico ou restrito do arquivo respeitar o seu nível de acesso.

--- a/PDFMerger/WebContent/arquivos.xhtml
+++ b/PDFMerger/WebContent/arquivos.xhtml
@@ -160,8 +160,10 @@
 										<td>#{arquivo.nome}</td>
 										<td class="text-center">
 											<i class="fa fa-pencil" aria-hidden="true"></i>
+											<i class="fa fa-cloud-download icon-line" aria-hidden="true"></i>
 											<i class="fa fa-trash-o icon-line" aria-hidden="true"></i>
-											<i class="fa fa-users icon-line" aria-hidden="true"></i>
+											<h:outputLabel rendered="#{arquivo.getAcesso().equals('R')}" styleClass="fa fa-user icon-line-u" />
+											<h:outputLabel rendered="#{arquivo.getAcesso().equals('P')}" styleClass="fa fa-users icon-line" />
 										</td>
 									</tr>
 								</tbody>
