Melhorias nos botões de cancelar e limpar.
Corrigido problema de exigir campos obrigatórios nos botões de cancelar
e limpar campos.

--- a/PDFMerger/WebContent/arquivos.xhtml
+++ b/PDFMerger/WebContent/arquivos.xhtml
@@ -88,7 +88,7 @@
                     			</div>
 					
 								<div class="text-center">
-									<h:commandButton styleClass="btn btn-default bot" action="#{beanArquivo.resetaBean}" value="Cancelar" />
+									<h:commandLink styleClass="btn btn-default bot" action="#{beanArquivo.resetaBean}" value="Cancelar" />
 									<h:commandButton styleClass="btn btn-success bot botLine" action="#{beanArquivo.atualizar}" value="Atualizar" />
 								</div>
 					
