--- a/PDFMerger/WebContent/cadastro.xhtml
+++ b/PDFMerger/WebContent/cadastro.xhtml
@@ -136,7 +136,7 @@
     	                		</div>
     	                		
 								<div class="text-center">
-									<h:commandButton styleClass="btn btn-default bot" action="#{beanUsuario.resetaBean}" value="#{beanUsuario.limpaCancela}" />
+									<h:commandLink styleClass="btn btn-default bot" action="#{beanUsuario.resetaBean}" value="#{beanUsuario.limpaCancela}" />
 									<h:commandButton styleClass="btn btn-success bot botLine" action="#{beanUsuario.cadastrar}" value="#{beanUsuario.cadastraAtualiza}" />
 								</div>
 							</h:form>
