Criação da pagina de união de PDF.

--- a/PDFMerger/WebContent/cadastro.xhtml
+++ b/PDFMerger/WebContent/cadastro.xhtml
@@ -31,7 +31,7 @@
 				<div class="row">	
 					<div class="col-sm-12">
 						<a href="cadastro.xhtml"><i class="selecionado fa fa-user-plus icon-nav fa-1x" aria-hidden="true"></i></a>
-						<a href=""><i class="fa fa-files-o icon-nav fa-1x" aria-hidden="true"></i></a>
+						<a href="uniao.xhtml"><i class="fa fa-files-o icon-nav fa-1x" aria-hidden="true"></i></a>
 						<a href="arquivos.xhtml"><i class="fa fa-cogs icon-nav fa-1x" aria-hidden="true"></i></a>
 						<ul class="navbar-nav navbar-right nav-drop">
 							<li class="dropdown">
