Desenvolvido função de junção de pdf.
Desenvolvido a função de juntar arquivos pdf, e adicionado botão para
limpar os campos e arquivos selecionados no módulo de junção de pdf.

--- a/PDFMerger/WebContent/uniao.xhtml
+++ b/PDFMerger/WebContent/uniao.xhtml
@@ -99,7 +99,8 @@
                     			</div>
                     			
                     			<div class="text-center">
-									<h:commandButton styleClass="btn btn-success botG" value="Gerar arquivo" />
+                    				<h:commandLink styleClass="btn btn-default bot" value="Limpar" action="#{beanUniao.resetaBean}" />
+									<h:commandButton styleClass="btn btn-success bot botLine" value="Gerar arquivo" action="#{beanUniao.geraArquivoUnido}" />
 								</div>
                     			
 							</h:form>
