Melhorias no cadastro de usuários.
Desenvolvido identificação do perfil do usuário logado no módulo de
cadastro. Usuário comum não pode cadastrar outros usuários e não
visualiza cadastro de outros usários.
Também não é mais permitido excluir o usário administrador padrão do
sistema.
A lista de usuários agora é sempre exibida em ordem alfabética pela
coluna nome.

--- a/PDFMerger/WebContent/cadastro.xhtml
+++ b/PDFMerger/WebContent/cadastro.xhtml
@@ -74,8 +74,11 @@
                         			</div>
 									<label for="perfil" class="col-sm-1 control-label">Perfil</label>
                         			<div class="col-sm-3">
-                                    	<h:selectOneMenu styleClass="form-control" value="#{beanUsuario.perfil}" biding="#{beanUsuario.perfil}">
+                                    	<h:selectOneMenu rendered="#{'Administrador'.equals(usuarioLogado.perfil)}" styleClass="form-control" value="#{beanUsuario.perfil}" biding="#{beanUsuario.perfil}">
                                    			<f:selectItem itemLabel="Administrador" itemValue="Administrador" />
+                                   			<f:selectItem itemLabel="Usuário comum" itemValue="Usuário comum" />
+                                    	</h:selectOneMenu>
+                                    	<h:selectOneMenu rendered="#{'Usuário comum'.equals(usuarioLogado.perfil)}" styleClass="form-control" value="#{beanUsuario.perfil}" biding="#{beanUsuario.perfil}">
                                    			<f:selectItem itemLabel="Usuário comum" itemValue="Usuário comum" />
                                     	</h:selectOneMenu>
 									</div>
