--- a/PDFMerger/WebContent/uniao.xhtml
+++ b/PDFMerger/WebContent/uniao.xhtml
@@ -170,7 +170,7 @@
 						</div>
 						
 						<h:panelGroup id="tabelaSelecionados">
-							<table class="table table-hover" id="dev-table2">
+							<table class="table table-hover margem-zero" id="dev-table2">
 								<thead>
 									<tr>
 										<th class="col-md-9">Arquivo</th>
